Update and rename 11ty_404.md to 009-11ty-404.md

--- a/recipes/009-11ty-404.md
+++ b/recipes/009-11ty-404.md
@@ -1,5 +1,7 @@
 ---
 title: Add a 404 page to your Eleventy site
+authorName: Raymond Camden
+authorURL: https://www.raymondcamden.com
 ---
 
 ### Directions
