--- a/recipes/009-11ty-404.md
+++ b/recipes/009-11ty-404.md
@@ -10,20 +10,11 @@ authorURL: https://www.raymondcamden.com
 ```md
 ---
 title: Oops! Not Found
-permalink: 404.html
+layout: base
+permalink: /404.html
 ---
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
-  </head>
-  <body>
-    <h1>{{ title }}</h1>
-    <p>This is where you should tell the user how to find their content. Maybe on the <a href="{{ "/" | url }}">home page?</a></p>
-  </body>
-</html>
+
+This is where you should tell the user how to find their content. Maybe on the [home page?](./)
 ```
 
 The actual contents can vary of course, but in general a good 404 page informs the user the content they wanted was not found and attempts to give them resources to find what
